chore(ci): Run CI builds against built artifact

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,13 @@ jobs:
       install:
         - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
         - sudo apt-get install -y nodejs
+      before_script:
+        - npm install -g babel-cli
       script:
+        - npm pack
         - cd examples/plain
-        - npm install
+        - yarn add ../../bugsnag-react-native-*.tgz
+        - yarn install
         - ./node_modules/.bin/react-native link
         - cd android
         - ./gradlew assembleRelease
@@ -41,9 +45,13 @@ jobs:
       xcode_scheme: BugsnagReactNative
       install:
         - brew install node
+      before_script:
+        - npm install -g babel
       script:
+        - npm pack
         - cd examples/plain
-        - npm install
+        - yarn add ../../bugsnag-react-native-*.tgz
+        - yarn install
         - ./node_modules/.bin/react-native link
         - cd ios
         - xcodebuild -project BugsnagReactNativeExample.xcodeproj -scheme BugsnagReactNativeExample build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -quiet
